--- a/package.json
+++ b/package.json
@@ -8,60 +8,50 @@
   "author": "",
   "license": "LGPL-2.1",
   "scripts": {
-    "build": "webpack",
-    "watch": "webpack --watch",
+    "watch": "./build.js -w",
+    "build": "./build.js",
     "clean": "cd ./dist && rm -rf *",
     "eslint": "eslint --ext .jsx --ext .js src/ lib/",
     "eslint:fix": "eslint --fix --ext .jsx --ext .js src/ lib/"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.0",
-    "@babel/eslint-parser": "^7.13.14",
-    "@babel/preset-env": "7.12.17",
-    "@babel/preset-react": "^7.0.0",
     "argparse": "^2.0.1",
-    "babel-loader": "^8.0.0",
     "chrome-remote-interface": "^0.32.1",
-    "compression-webpack-plugin": "^9.0.0",
-    "copy-webpack-plugin": "^9.0.0",
-    "css-loader": "^6.5.0",
-    "css-minimizer-webpack-plugin": "^3.0.1",
-    "eslint": "^7.10.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-config-standard-jsx": "^10.0.0",
-    "eslint-config-standard-react": "^11.0.0",
-    "eslint-plugin-flowtype": "^5.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.21.0",
-    "eslint-plugin-react-hooks": "^4.1.2",
-    "eslint-plugin-standard": "^4.0.1",
-    "eslint-webpack-plugin": "^2.5.3",
-    "gettext-parser": "^2.0.0",
-    "glob": "^7.1.2",
+    "esbuild": "0.25.0",
+    "esbuild-plugin-copy": "2.1.1",
+    "esbuild-plugin-replace": "1.4.0",
+    "esbuild-sass-plugin": "3.3.1",
+    "esbuild-wasm": "0.25.0",
+    "eslint": "8.57.1",
+    "eslint-config-standard": "17.1.0",
+    "eslint-config-standard-jsx": "11.0.0",
+    "eslint-config-standard-react": "13.0.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsx-a11y": "6.10.2",
+    "eslint-plugin-promise": "6.6.0",
+    "eslint-plugin-react": "7.37.4",
+    "eslint-plugin-react-hooks": "4.6.2",
+    "gettext-parser": "8.0.0",
+    "glob": "11.0.1",
     "htmlparser": "^1.7.7",
     "jed": "^1.1.1",
-    "mini-css-extract-plugin": "^2.5.3",
     "popper.js": "^1.14.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.35.2",
-    "sass-loader": "^12.1.0",
-    "sizzle": "^2.3.3",
-    "strict-loader": "^1.2.0",
-    "string-replace-loader": "^3.0.0",
-    "terser-webpack-plugin": "^5.1.4",
-    "webpack": "^5.54.0",
-    "webpack-cli": "^4.9.1"
+    "sass": "1.79.6",
+    "sizzle": "2.3.10",
+    "stylelint": "16.15.0",
+    "stylelint-config-recommended-scss": "14.0.0",
+    "stylelint-config-standard-scss": "14.0.0",
+    "stylelint-formatter-pretty": "4.0.1",
+    "stylelint-use-logical-spec": "5.0.1"
   },
   "dependencies": {
-    "@patternfly/patternfly": "4.224.2",
-    "@patternfly/react-core": "4.276.6",
-    "@patternfly/react-icons": "4.93.6",
-    "@patternfly/react-styles": "4.92.6",
-    "@patternfly/react-table": "4.112.39",
+    "@patternfly/patternfly": "5.4.2",
+    "@patternfly/react-core": "5.4.14",
+    "@patternfly/react-icons": "5.4.2",
+    "@patternfly/react-styles": "5.4.1",
+    "@patternfly/react-table": "5.4.16",
     "moment": "^2.19.3"
   },
   "engines": {
