dependabot: set up dependabot to update dependencies

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,9 +1,52 @@
 version: 2
 updates:
-  - package-ecosystem: "github-actions"
+  - package-ecosystem: "npm"
     directory: "/"
     schedule:
       interval: "weekly"
-    target-branch: "main"
-    commit-message:
-      prefix: "ci"
+      # run these when most of our developers don't work
+      day: "sunday"
+      timezone: "Europe/Berlin"
+    open-pull-requests-limit: 3
+    labels:
+      - "node_modules"
+    groups:
+      eslint:
+        patterns:
+          - "eslint*"
+      esbuild:
+        patterns:
+          - "esbuild*"
+      patternfly:
+        patterns:
+          - "@patternfly*"
+      react:
+        patterns:
+          - "react*"
+      stylelint:
+        patterns:
+          - "stylelint*"
+      types:
+        patterns:
+          - "@types*"
+          - "types*"
+      xterm:
+        patterns:
+          - "xterm*"
+    ignore:
+      # needs to be done in Cockpit first
+      - dependency-name: "@patternfly/*"
+        update-types: ["version-update:semver-major"]
+
+      # PF6 doesn't support React 19 yet.
+      # https://github.com/patternfly/pf-roadmap/issues/201
+      - dependency-name: "*react*"
+        update-types: ["version-update:semver-major"]
+
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    open-pull-requests-limit: 3
+    labels:
+      - "no-test"
+    schedule:
+      interval: "weekly"
