--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
 [tool.black]
 line-length = 110
 include = '(\.py|^/test/check-.*|^/test/files/mock-insights)$'
+
+[tool.codespell]
+skip = './node_modules,./dist'
+ignore-words-list = 'doubleclick'
