--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 *.retry
 *.rpm
 __pycache__/
-node_modules/
 dist/
 /pkg/
 package-lock.json
@@ -15,4 +14,5 @@ package-lock.json
 !/po/subscription-manager.pot
 /test/common/
 /test/images/
+/tools/
 .idea
