--- a/package.json
+++ b/package.json
@@ -14,30 +14,30 @@
     "eslint:fix": "eslint --fix --ext .jsx --ext .js src/"
   },
   "devDependencies": {
-    "argparse": "^2.0.1",
-    "esbuild": "^0.25.0",
-    "esbuild-sass-plugin": "^3.3.1",
-    "esbuild-wasm": "^0.25.0",
-    "eslint": "^8.57.1",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-config-standard-jsx": "^11.0.0",
-    "eslint-config-standard-react": "^13.0.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-promise": "^6.6.0",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-standard": "^4.0.1",
-    "gettext-parser": "^8.0.0",
-    "glob": "^11.0.1",
-    "htmlparser": "^1.7.7",
-    "jed": "^1.1.1",
-    "popper.js": "^1.14.7",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "sizzle": "^2.3.10"
+    "argparse": "2.0.1",
+    "esbuild": "0.25.0",
+    "esbuild-sass-plugin": "3.3.1",
+    "esbuild-wasm": "0.25.0",
+    "eslint": "8.57.1",
+    "eslint-config-standard": "17.1.0",
+    "eslint-config-standard-jsx": "11.0.0",
+    "eslint-config-standard-react": "13.0.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsx-a11y": "6.10.2",
+    "eslint-plugin-promise": "6.6.0",
+    "eslint-plugin-react": "7.37.4",
+    "eslint-plugin-react-hooks": "4.6.2",
+    "eslint-plugin-flowtype": "8.0.3",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-standard": "4.0.1",
+    "gettext-parser": "8.0.0",
+    "glob": "11.0.1",
+    "htmlparser": "1.7.7",
+    "jed": "1.1.1",
+    "popper.js": "1.14.7",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "sizzle": "2.3.10"
   },
   "dependencies": {
     "@patternfly/patternfly": "6.3.1",
@@ -46,7 +46,7 @@
     "@patternfly/react-styles": "6.3.1",
     "@patternfly/react-table": "6.3.1",
     "@patternfly/react-tokens": "6.3.1",
-    "moment": "^2.19.3"
+    "moment": "2.19.3"
   },
   "engines": {
     "npm": "*"
