--- a/package.json
+++ b/package.json
@@ -44,8 +44,7 @@
     "@patternfly/react-icons": "6.3.1",
     "@patternfly/react-styles": "6.3.1",
     "@patternfly/react-table": "6.3.1",
-    "@patternfly/react-tokens": "6.3.1",
-    "moment": "2.19.3"
+    "@patternfly/react-tokens": "6.3.1"
   },
   "engines": {
     "npm": "*"
