--- a/packit.yaml
+++ b/packit.yaml
@@ -16,6 +16,43 @@ srpm_build_deps:
   - npm
 
 jobs:
+  - job: tests
+    trigger: pull_request
+    targets: &test_targets
+      fedora-42: {}
+      fedora-43: {}
+      fedora-latest-stable-aarch64: {}
+      fedora-rawhide: {}
+      centos-stream-9-x86_64:
+        distros: ["centos-stream-9", "CentOS-Stream-9-image-mode"]
+      centos-stream-9-aarch64: {}
+      centos-stream-10-x86_64:
+        distros: ["centos-stream-10", "CentOS-Stream-10-image-mode"]
+
+  - job: copr_build
+    trigger: pull_request
+    targets: *test_targets
+
+  - job: copr_build
+    trigger: release
+    owner: "@cockpit"
+    project: "cockpit-preview"
+    preserve_project: True
+    actions:
+      post-upstream-clone: make subscription-manager-cockpit.spec
+      # HACK: tarball for releases (copr_build, koji, etc.), copying spec's Source0; this
+      # really should be the default, see https://github.com/packit/packit-service/issues/1505
+      create-archive:
+        - sh -exc "curl -L -O https://github.com/cockpit-project/subscription-manager-cockpit/releases/download/${PACKIT_PROJECT_VERSION}/${PACKIT_PROJECT_NAME_VERSION}.tar.xz"
+        - sh -exc "ls ${PACKIT_PROJECT_NAME_VERSION}.tar.xz"
+
+  - job: copr_build
+    trigger: commit
+    branch: "^main$"
+    owner: "@cockpit"
+    project: "main-builds"
+    preserve_project: True
+
   - job: propose_downstream
     trigger: release
     dist_git_branches:
