--- a/packit.yaml
+++ b/packit.yaml
@@ -9,7 +9,12 @@ copy_upstream_release_description: true
 
 actions:
   post-upstream-clone: make subscription-manager-cockpit.spec
-  create-archive: make dist node-cache
+  create-archive:
+    - bash -c 'echo "TOMDEBUG"'
+    - bash -c 'echo PACKIT_UPSTREAM_PACKAGE_NAME=${PACKIT_UPSTREAM_PACKAGE_NAME}'
+    - bash -c 'echo PACKIT_PROJECT_VERSION=${PACKIT_PROJECT_VERSION}'
+    - bash -c 'echo PACKIT_PROJECT_NAME_VERSION=${PACKIT_PROJECT_NAME_VERSION}'
+    - bash -c 'echo MAKE_VERSION=$(make print-version)'
 
 srpm_build_deps:
   - make
